--- a/style.css
+++ b/style.css
@@ -1,1 +1,31 @@
+body {
+    background-color: #f2f2f2;
+    font-family: 'Ubuntu Mono', monospace;
+}
+
+.form-control {
+    width: 22%;
+}
+
+#add-food {
+    background: #007399;
+}
+
+.btn-primary {
+    background: #007399;
+    margin-left: 5px;
+}
+
+h1 {
+    font-family: 'Pacifico', cursive;
+    font-size: 40px;
+}
+
+
+
+
+
+
+
+
 
